@@ -4,3 +4,4 @@
 * streaming
 * linterp table path munging [MH]
 * Make webpage suck less
+* Handle RW dirfile on RO data better [JPF]
