@@ -1,3 +1,8 @@
+2010-11-17   D. V. Wiebe <getdata@ketiltrout.net>   svn:476
+	* bindings/python/pydirfile.c (gdpy_dirfile_init)
+	bindings/cxx/getdata/dirfile.h: Open dirfiles read-only by default (for
+	compatibility with the C API.
+
 2010-11-16   D. V. Wiebe <getdata@ketiltrout.net>   svn:475
 	* bindings/python/pydirfile.c (gdpy_dirfile_getdata): If neither num_samples
 	or num_frames are specified, raise ValueError.
